# Generated by Django 5.2.1 on 2025-05-21 12:05

from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
    ]

    operations = [
        migrations.CreateModel(
            name='Nutrient',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('food_group', models.CharField(max_length=100)),
                ('food_name', models.CharField(max_length=100, unique=True)),
                ('is_favorite', models.BooleanField(default=False)),
                ('category', models.CharField(choices=[('macros', 'MACROS'), ('micros', 'MICRO')], default='macros', max_length=100)),
                ('subcategory', models.CharField(choices=[('energy', 'ENERGY'), ('proteins', 'PROTEINS'), ('fats', 'FATS'), ('saturated_fat_acids', 'SATURATED FAT ACIDS'), ('monounsaturated_fat_acids', 'MONOUNSATURATED FAT ACIDS'), ('polyunsaturated_fat_acids', 'POLYUNSATURATED FAT ACIDS'), ('trans_fat_acids', 'TRANS FAT ACIDS'), ('carbs', 'CARBS'), ('minerals', 'MINERALS'), ('vitamins', 'VITAMINS'), ('others', 'OTHERS')], default='energy', max_length=100)),
                ('measure_unit', models.CharField(max_length=2)),
            ],
            options={
                'verbose_name': 'Nutrient',
                'verbose_name_plural': 'Nutrients',
            },
        ),
    ]
