# Generated by Django 5.2.1 on 2025-05-21 12:05

import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('nutrient_data', '0001_initial'),
    ]

    operations = [
        migrations.CreateModel(
            name='NutrientRange',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('min', models.FloatField()),
                ('max', models.FloatField()),
                ('current_value', models.FloatField()),
                ('nutrient', models.ForeignKey(on_delete=django.db.models.deletion.DO_NOTHING, to='nutrient_data.nutrient')),
            ],
            options={
                'verbose_name': 'Nutrient Range',
                'verbose_name_plural': 'Nutrient Ranges',
            },
        ),
        migrations.CreateModel(
            name='NutrientTracker',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('date', models.DateField()),
                ('nutrient_range', models.ManyToManyField(to='tracker_data.nutrientrange')),
            ],
            options={
                'verbose_name': 'Nutrient Tracker',
                'verbose_name_plural': 'Nutrient Trackers',
            },
        ),
    ]
